adding tic-tac-toe

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -14,9 +14,17 @@
     <h1>Play Tic-Tac-Toe</h1>
   </header>
 
-  <article id="tic-tac-toe--container">
-
-  </article>
+  <div class="tic-tac-toe--container">
+    <span class="box" id="1"></span>
+    <span class="box" id="2"></span>
+    <span class="box" id="3"></span>
+    <span class="box" id="4"></span>
+    <span class="box" id="5"></span>
+    <span class="box" id="6"></span>
+    <span class="box" id="7"></span>
+    <span class="box" id="8"></span>
+    <span class="box" id="9"></span>
+  </div>
 
   <footer></footer>
 
